Rewrites and clarifies project README for onboarding
Improves onboarding by restructuring and rewriting the README.
Clarifies project purpose, features, tech stack, and quick-start steps.
Provides direct links to key files and endpoints, adds example API usage,
and streamlines contribution and development notes for easier adoption.